--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=catalogdb;Username=catalogdb;Password=catalogdb321#@"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=catalogdb;Username=postgres;Password=Dibakor"
   }
 }
