--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -8,5 +8,21 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=catalogdb;Username=postgres;Password=Dibakor"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Elasticsearch" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "catalog-api-log-{0:yyyy.MM.dd}",
+          "autoRegisterTemplate": true,
+          "numberOfShards": 1,
+          "numberOfReplicas": 0
+        }
+      }
+    ]
   }
 }
