--- a/src/Services/Basket/Basket.API/Properties/launchSettings.json
+++ b/src/Services/Basket/Basket.API/Properties/launchSettings.json
@@ -8,13 +8,15 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5056"
     },
-    "https": {
+    "Basket": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7125;http://localhost:5056"
+      "applicationUrl": "https://localhost:8001;http://localhost:5001"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
