complete Discount gprc

--- a/src/Services/Discount/Discount.API/appsettings.json
+++ b/src/Services/Discount/Discount.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=discountdb;Username=postgres;Password=Dibakor"
+  }
 }
