--- a/src/Services/Discount/Discount.API/Properties/launchSettings.json
+++ b/src/Services/Discount/Discount.API/Properties/launchSettings.json
@@ -1,20 +1,12 @@
 {
   "profiles": {
-    "http": {
+    "Discount": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5244"
-    },
-    "https": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7280;http://localhost:5244"
+      "applicationUrl": "https://localhost:8002"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
